--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTIPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,6 +6,6 @@
   <title>MrDaniel30</title>
 </head>
 <body>
-  ola 
+  Danie Gonçalves
 </body>
 </html>
