--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <title>MrDaniel30</title>
 </head>
 <body>
-  Danie Gonçalves
+      <h1>Sobre mim</h1>
+      <p>Olá, eu sou o Daniel Gonçalves, tenho 17 anos e estudo na Escola Profissional de Braga<p>
+      <h2>Hobbies</h2>
+      <p>No meu tempo livre gosto de jogar no pc, ir o ginásio , assistir videos no <a href="https://www.youtube.com">youtube</a> e lives da <a href="https://www.twitch.tv">twitch</a>.</p>
+      <h2>Projeto PAP</h2>
+      <p>O projeto que começei a preparar para a PAP será um Jogo FPS criado na Unriel Engine ele se chamará "DeadZone"(O nome ainda pode ser trocado), o jogo vai ser offline, vai ser em primeira pessoa, os objetivos principais para o jogador é quase igual ao do CS2, já que o jogo é inspirado muito nele, mas umas das maiores diferenças entre os jogos fps do estilo de CS do meu é que o "DeadZone" vai ter um estilo de visualização  que vai ser inspirado no "Unrecord" esse sendo uym jogo que ainda nao foi lançado.</p>
+      <br />
+      
+
 </body>
 </html>
